Bug 1725419 - Make alert summaries collapsable (#7240)
* Bug 1725419 - Make alert summaries collapsable

* Bug 1725419 - Add unit test

* Bug 1725419 - Address PR requests, alert summary mock-up smaller, add unit test, move show less alerts

* Bug 1725419 - Add constant visibleRows

* Bug 1725419 - Add 'Show more alerts' tooltip

* Bug 1725329 - Address PR requests

--- a/ui/css/perf.css
+++ b/ui/css/perf.css
@@ -551,3 +551,7 @@ li.pagination-active.active > button {
   cursor: not-allowed;
   opacity: 0.65;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
